Add scrolled-animation html and css files

--- a/index.html
+++ b/index.html
@@ -47,11 +47,16 @@
             <div class="row">
                 <div class="col-12 mr-5">
                     <ol>
-                        <li><a href="https://github.com/Iris-Smok/Expanding-Cards">Expanding-Cards</a></li>
-                        <li><a href="https://github.com/Iris-Smok/Creating-The-Steps">Creating-The-Steps</a></li>
-                        <li><a href="https://github.com/Iris-Smok/Blurry-Loading">Blurry-Loading</a></li>
-                        <li><a href="https://github.com/Iris-Smok/Rotating-Navigation">
+                        <li><a href="https://github.com/Iris-Smok/Expanding-Cards" target="_blank">Expanding-Cards</a>
+                        </li>
+                        <li><a href="https://github.com/Iris-Smok/Creating-The-Steps"
+                                target="_blank">Creating-The-Steps</a></li>
+                        <li><a href="https://github.com/Iris-Smok/Blurry-Loading" target="_blank">Blurry-Loading</a>
+                        </li>
+                        <li><a href="https://github.com/Iris-Smok/Rotating-Navigation" target="_blank">
                                 Rotating-Navigation</a></li>
+                        <li><a href="scroll-animation/scroll-animation.html" target="_blank">
+                                Scroll Animation</a></li>
                     </ol>
                 </div>
             </div>
