Create html and css style setup for scroll-animation project

--- a/index.html
+++ b/index.html
@@ -20,22 +20,13 @@
 <body>
 
     <!-- Navbar -->
+    <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="index.html">JavaScript Projects</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
-            aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarText">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="index.html">Home <span class="sr-only"></span></a>
-                </li>
-            </ul>
-            <span class="navbar-text">
-                50 Projects in 50 days / Udemy Academy
-            </span>
-        </div>
+
+        <a class="navbar-brand" href="../index.html">JavaScript Projects</a>
+        <span class="navbar-text">
+            50 Projects in 50 days / Udemy Academy
+        </span>
     </nav>
 
     <section class="text-light">
