--- a/scroll-animation/scroll-animation.html
+++ b/scroll-animation/scroll-animation.html
@@ -13,32 +13,38 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
         integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <!-- CSS -->
-    <link rel="stylesheet" href="style.css">
-    <title>JavaScript Project</title>
+    <link rel="stylesheet" href="scroll-animation.css">
+    <title>Scroll Animation</title>
 </head>
 
 <body>
 
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="index.html">JavaScript Projects</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
-            aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarText">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="index.html">Home <span class="sr-only"></span></a>
-                </li>
-            </ul>
-            <span class="navbar-text">
-                50 Projects in 50 days / Udemy Academy
-            </span>
-        </div>
+
+        <a class="navbar-brand" href="../index.html">JavaScript Projects</a>
+        <span class="navbar-text">
+            50 Projects in 50 days / Udemy Academy
+        </span>
     </nav>
 
-    <h1>Scrool Animation</h1>
+    <h1 class="text-center m-5">Scrool to see the animation</h1>
+    <section class="content-body">
+
+        <div class="box">Content</div>
+        <div class="box">Content</div>
+        <div class="box">Content</div>
+        <div class="box">Content</div>
+        <div class="box">Content</div>
+        <div class="box">Content</div>
+        <div class="box">Content</div>
+        <div class="box">Content</div>
+        <div class="box">Content</div>
+        <div class="box">Content</div>
+        <div class="box">Content</div>
+        <div class="box">Content</div>
+        <div class="box">Content</div>
+    </section>
 
     <!-- Footer -->
     <footer class="footer mt-auto py-3 bg-dark">
@@ -56,6 +62,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js"
         integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous">
     </script>
+    <script src="scroll-animation-script.js"></script>
 </body>
 
 </html>
