Add images for categories, style colors and boxes

--- a/scroll-animation/scroll-animation.html
+++ b/scroll-animation/scroll-animation.html
@@ -28,23 +28,84 @@
         </span>
     </nav>
 
-    <h1 class="text-center m-5">Scrool to see the animation</h1>
+
+    <section class="text-center m-5">
+        <h1 class="mb-2">Categories</h1>
+        <h5 class="font-italic"> Search all recipes by category</h5>
+    </section>
+
+
     <section class="content-body">
 
-        <div class="box">Content</div>
-        <div class="box">Content</div>
-        <div class="box">Content</div>
-        <div class="box">Content</div>
-        <div class="box">Content</div>
-        <div class="box">Content</div>
-        <div class="box">Content</div>
-        <div class="box">Content</div>
-        <div class="box">Content</div>
-        <div class="box">Content</div>
-        <div class="box">Content</div>
-        <div class="box">Content</div>
-        <div class="box">Content</div>
+        <a href="#">
+            <div class="card box">
+                <div class="card-body">
+                    <h5 class="card-title text-center">Breakfast</h5>
+                </div>
+                <img src="../assets/images/scrolling-animation/breakfast.jpg" class="card-img-top" alt="...">
+            </div>
+        </a>
+
+        <a href="#">
+            <div class="card box">
+                <div class="card-body">
+                    <h5 class="card-title text-center">Lunch</h5>
+                </div>
+                <img src="../assets/images/scrolling-animation/hamburgers.jpg" class="card-img-top" alt="...">
+            </div>
+        </a>
+
+        <a href="#">
+            <div class="card box">
+                <div class="card-body">
+                    <h5 class="card-title text-center">Dinner</h5>
+                </div>
+                <img src="../assets/images/scrolling-animation/dinner.jpg" class="card-img-top" alt="...">
+            </div>
+        </a>
+
+        <a href="#">
+            <div class="card box">
+                <div class="card-body">
+                    <h5 class="card-title text-center">Snacks</h5>
+                </div>
+                <img src="../assets/images/scrolling-animation/snack.jpg" class="card-img-top" alt="...">
+            </div>
+        </a>
+
+        <a href="#">
+            <div class="card box">
+                <div class="card-body">
+                    <h5 class="card-title text-center">Desserts</h5>
+                </div>
+                <img src="../assets/images/scrolling-animation/desserts.jpg" class="card-img-top" alt="...">
+            </div>
+        </a>
+
+        <a href="#">
+            <div class="card box">
+                <div class="card-body">
+                    <h5 class="card-title text-center">Salad</h5>
+                </div>
+                <img src="../assets/images/scrolling-animation/salad.jpg" class="card-img-top" alt="...">
+            </div>
+        </a>
+
+        <a href="#">
+            <div class="card box">
+                <div class="card-body">
+                    <h5 class="card-title text-center">Smoothie</h5>
+                </div>
+                <img src="../assets/images/scrolling-animation/smoothie.jpg" class="card-img-top" alt="...">
+            </div>
+        </a>
+
+
     </section>
+
+    <div class="text-right m-3">
+        <a href="#top" class="text-decoration-none text-dark">Back to top</a>
+    </div>
 
     <!-- Footer -->
     <footer class="footer mt-auto py-3 bg-dark">
