Add new bg image and style project list

--- a/index.html
+++ b/index.html
@@ -19,47 +19,55 @@
 
 <body>
 
-    <!-- Navbar -->
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="hero-image">
+        <div class="bg-color">
+            <!-- Navbar -->
+            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 
-        <a class="navbar-brand" href="../index.html">JavaScript Projects</a>
-        <span class="navbar-text">
-            50 Projects in 50 days / Udemy Academy
-        </span>
-    </nav>
+                <a class="navbar-brand" href="../index.html">JavaScript Projects</a>
+                <span class="navbar-text">
+                    50 Projects in 50 days / Udemy Academy
+                </span>
+            </nav>
 
-    <section class="text-light">
-        <h1 class="text-center my-5">All Projects</h1>
+            <section class="text-light">
+                <h1 class="text-center my-5">All Projects</h1>
 
 
 
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-12 mr-5">
-                    <ol>
-                        <li><a href="https://github.com/Iris-Smok/Expanding-Cards" target="_blank">Expanding-Cards</a>
-                        </li>
-                        <li><a href="https://github.com/Iris-Smok/Creating-The-Steps"
-                                target="_blank">Creating-The-Steps</a></li>
-                        <li><a href="https://github.com/Iris-Smok/Blurry-Loading" target="_blank">Blurry-Loading</a>
-                        </li>
-                        <li><a href="https://github.com/Iris-Smok/Rotating-Navigation" target="_blank">
-                                Rotating-Navigation</a></li>
-                        <li><a href="scroll-animation/scroll-animation.html" target="_blank">
-                                Scroll Animation</a></li>
-                    </ol>
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-12 mr-5 text-center">
+                            <ol>
+                                <li><a href="https://github.com/Iris-Smok/Expanding-Cards"
+                                        target="_blank">Expanding-Cards</a>
+                                </li>
+                                <li><a href="https://github.com/Iris-Smok/Creating-The-Steps"
+                                        target="_blank">Creating-The-Steps</a></li>
+                                <li><a href="https://github.com/Iris-Smok/Blurry-Loading"
+                                        target="_blank">Blurry-Loading</a>
+                                </li>
+                                <li><a href="https://github.com/Iris-Smok/Rotating-Navigation" target="_blank">
+                                        Rotating-Navigation</a></li>
+                                <li><a href="scroll-animation/scroll-animation.html" target="_blank">
+                                        Scroll Animation</a></li>
+                                <li><a href="split-landing-page/split-landing-page.html" target="_blank">
+                                        Split Landing Page</a></li>
+                            </ol>
+                        </div>
+                    </div>
                 </div>
-            </div>
+            </section>
+
+
+
+            <!-- Footer -->
+            <footer class="footer mt-auto py-3 bg-dark">
+                <p class="m-0 text-center">For educational purposes only</p>
+            </footer>
+            <!-- End od Footer -->
         </div>
-    </section>
-
-    <!-- Footer -->
-    <footer class="footer mt-auto py-3 bg-dark">
-        <p class="m-0 text-center">For educational purposes only</p>
-    </footer>
-    <!-- End od navbar -->
-
+    </div>
     <!-- Bootstrap JS and jQery -->
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
@@ -70,6 +78,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js"
         integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous">
     </script>
+
 </body>
 
 </html>
