Added html structure, css style for bg image ans btns

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
                 <div class="container-fluid">
                     <div class="row">
-                        <div class="col-12 mr-5 text-center">
+                        <div class="col-12 mr-5">
                             <ol>
                                 <li><a href="https://github.com/Iris-Smok/Expanding-Cards"
                                         target="_blank">Expanding-Cards</a>
@@ -53,6 +53,10 @@
                                         Scroll Animation</a></li>
                                 <li><a href="split-landing-page/split-landing-page.html" target="_blank">
                                         Split Landing Page</a></li>
+                                <li><a href="" target="_blank">
+                                    </a></li>
+                                <li><a href="#" target="_blank">
+                                    </a></li>
                             </ol>
                         </div>
                     </div>
