--- a/scroll-animation/scroll-animation.html
+++ b/scroll-animation/scroll-animation.html
@@ -29,7 +29,7 @@
     </nav>
 
 
-    <section class="text-center m-5">
+    <section class="text-center my-5">
         <h1 class="mb-2">Categories</h1>
         <h5 class="font-italic"> Search all recipes by category</h5>
     </section>
