--- a/split-landing-page/split-landing-page.html
+++ b/split-landing-page/split-landing-page.html
@@ -14,7 +14,7 @@
         integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <!-- CSS -->
     <link rel="stylesheet" href="split-landing-page.css">
-    <title>Scroll Animation</title>
+    <title>Split Landing Page</title>
 </head>
 
 <body>
@@ -28,7 +28,16 @@
         </span>
     </nav>
 
-
+    <div class="main-container">
+        <div class="split left">
+            <h1>Plastation 5</h1>
+            <a href="#" class="btn">Buy Now</a>
+        </div>
+        <div class="split right">
+            <h1>XBox Series X</h1>
+            <a href="#" class="btn">Buy Now</a>
+        </div>
+    </div>
 
 
 
@@ -49,7 +58,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js"
         integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous">
     </script>
-    <script src="scroll-animation-script.js"></script>
+    <script src="split-landing-page.js"></script>
 </body>
 
 </html>
