Create html and add style to form

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
                                 <li><a href="https://github.com/Iris-Smok/Expanding-Cards"
                                         target="_blank">Expanding-Cards</a>
                                 </li>
+
                                 <li><a href="https://github.com/Iris-Smok/Creating-The-Steps"
                                         target="_blank">Creating-The-Steps</a></li>
                                 <li><a href="https://github.com/Iris-Smok/Blurry-Loading"
@@ -53,10 +54,8 @@
                                         Scroll Animation</a></li>
                                 <li><a href="split-landing-page/split-landing-page.html" target="_blank">
                                         Split Landing Page</a></li>
-                                <li><a href="" target="_blank">
-                                    </a></li>
-                                <li><a href="#" target="_blank">
-                                    </a></li>
+                                <li><a href="form-wave-animation/form-wave-animation.html" target="_blank">
+                                        Form Wave Animation</a></li>
                             </ol>
                         </div>
                     </div>
