Add link to new projects

--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
                                         Split Landing Page</a></li>
                                 <li><a href="form-wave-animation/form-wave-animation.html" target="_blank">
                                         Form Wave Animation</a></li>
+                                <li><a href="sound-board/sound-board.html" target="_blank">
+                                        Sound Board</a></li>
                             </ol>
                         </div>
                     </div>
